Fix grid's gap bug

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -348,7 +348,7 @@ header {
     overflow: visible;
     display: grid;
     grid-template-columns: auto auto;
-    grid-column-gap: 20px;
+    grid-column-gap: 45px;
 
     .speaker {
       height: auto;
